Fix overflow bug in small devices

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,25 @@ a{
 }
 
 #root{
+    width: 100%;
+    height: 100vh;
     background-color: var(--dark-1);
     font-family: sans-serif;
     position: relative;
     z-index: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
     color: var(--text);
+}
+#root::-webkit-scrollbar{
+    width: 12px;
+    background: black;
+}
+#root::-webkit-scrollbar-thumb{
+    background-color: #444;
+    width: 10px;
+    border: 3px black solid;
+    border-radius: 10px;
 }
 
 .hero-sec{
